--- a/.openshift/keystone.conf.erb
+++ b/.openshift/keystone.conf.erb
@@ -1,12 +1,12 @@
 [DEFAULT]
 # A "shared secret" between keystone and other openstack services
-# admin_token = ADMIN
+admin_token = <%= ENV['OPENSHIFT_SECRET_TOKEN'] || 'ADMIN' %>
 
 # The IP address of the network interface to listen on
-# bind_host = 0.0.0.0
+bind_host = <%= ENV['OPENSHIFT_PYTHON_IP'] %>
 
 # The port number which the public service listens on
-# public_port = 5000
+public_port = <%= ENV['OPENSHIFT_PYTHON_PORT'] %>
 
 # The port number which the public admin listens on
 # admin_port = 35357
@@ -46,10 +46,10 @@
 # === Logging Options ===
 # Print debugging output
 # (includes plaintext request logging, potentially including passwords)
-# debug = False
+debug = True
 
 # Print more verbose output
-# verbose = False
+verbose = True
 
 # Name of log file to output to. If not set, logging will go to stdout.
 # log_file = keystone.log
@@ -140,7 +140,7 @@
 
 [sql]
 # The SQLAlchemy connection string used to connect to the database
-connection = sqlite:///keystone.db
+connection = sqlite:///<%= ENV['OPENSHIFT_DATA_DIR'] %>keystone.db
 
 # the timeout before idle sql connections are reaped
 # idle_timeout = 200
@@ -425,4 +425,4 @@ oauth1 = keystone.auth.plugins.oauth1.OAuth
 
 [paste_deploy]
 # Name of the paste configuration file that defines the available pipelines
-config_file = keystone-paste.ini
+config_file = <%= ENV['OPENSHIFT_REPO_DIR'] %>/.openshift/keystone-paste.ini
